[package]
name = "ai-domain-harvester"
version = "0.1.0"
edition = "2024"

authors = ["Iago Bozza <iago@iagobozza.com>"]
description = "Concurrent Rust CLI for scraping and structuring .ai domain sales from NamePros forum data."
readme = "README.md"

license = "MIT OR Apache-2.0"
repository = "https://github.com/writeonlycode/ai-domain-harvester"
homepage = "https://github.com/writeonlycode/ai-domain-harvester"
documentation = "https://docs.rs/leadforge"

keywords = ["cli", "async", "scraper"]
categories = ["command-line-utilities"]

[[bin]]
name = "ai-domain-harvester"
path = "src/main.rs"

include = [
    "src/**",
    "Cargo.toml",
    "README.md",
    "LICENSE-MIT.md",
    "LICENSE-APACHE.md"
]

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
futures = "0.3.32"
reqwest = "0.13.2"
scraper = "0.26.0"
thiserror = "2.0.18"
tokio = { version = "1.51.1", features = ["full"] }

[dev-dependencies]
httpmock = "0.8.3"
